testing a fix for the behaviour of the layout with the  svg when zooming in on mobile

--- a/src/styling/GlobalStyles.styles.css
+++ b/src/styling/GlobalStyles.styles.css
@@ -88,7 +88,6 @@ iframe,
 embed,
 object {
   display: block;
-  vertical-align: middle;
   max-width: 100%;
 }
 audio:not([controls]) {
