--- a/src/styling/GlobalVariables.styles.css
+++ b/src/styling/GlobalVariables.styles.css
@@ -21,7 +21,10 @@
   --header-desktop-height: 5.5rem;
 
   /*Mobile Content -> min-height = the rest of the page*/
-  --content-full-page: calc(var(--vh, 1vh) * 100 - var(--header-mobile-height));
+  --content-full-page: calc(
+    var(--vh, 1vh) * 100 - var(--header-mobile-height) -
+      env(safe-area-inset-bottom)
+  );
 
   /* Footer - only on desktop*/
   --footer-desktop-height: 5.5rem;
